[metadata]
name = python-odpt2jre
version = attr: odpt2jre.__version__
url = https://github.com/friuli-jokyo/python-odpt2jre
description = ODPT形式の鉄道運行情報をJR東日本風に変換
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = ふりうり

[options]
python_requires = >=3.10
packages = find:
install_requires =
  python-odpt-train-information @ git+https://github.com/friuli-jokyo/python-odpt-train-info
